@@ -1,3 +1,7 @@
+2014-10-24  Luke Kendall  <luke.kendall@cisra.canon.com.au>
+
+	* ntsec.xml: More language and typo fixes.
+
 2014-10-23  Corinna Vinschen  <corinna@vinschen.de>
 
 	* ntsec.xml: Fix language.
